force-app/main/default/objects/LogIntegracao__c/LogIntegracao__c.object-meta.xml
<CustomObject>
    <label>Log da Integração</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs das Integrações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>