force-app/main/default/objects/LogIntegracao__c/fields/DataHoraEnvio__c.field-meta.xml
<CustomField>
    <fullName>DataHoraEnvio__c</fullName>
    <label>Data e hora do envio</label>
    <type>DateTime</type>
</CustomField>