force-app/main/default/objects/LogIntegracao__c/fields/IdRegistro__c.field-meta.xml
<CustomField>
    <fullName>IdRegistro__c</fullName>
    <label>Id do Registro</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>