force-app/main/default/objects/LogIntegracao__c/fields/LinkLogIntegracao__c.field-meta.xml
<CustomField>
    <fullName>LinkLogIntegracao__c</fullName>
    <description>Link para o registro de Log da Integração utilizado</description>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link para o registro de Log da Integração utilizado</inlineHelpText>
    <label>Link para Log da Integração</label>
    <type>Text</type>
</CustomField>