force-app/main/default/objects/LogIntegracao__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Método</label>
    <type>TextArea</type>
</CustomField>