force-app/main/default/objects/LogIntegracao__c/fields/ResponseBodyText__c.field-meta.xml
<CustomField>
    <fullName>ResponseBodyText__c</fullName>
    <label>Response Body Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>