force-app/main/default/objects/LogIntegracao__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Código do Status</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>