force-app/main/default/objects/LogIntegracao__c/fields/StatusResponse__c.field-meta.xml
<CustomField>
    <fullName>StatusResponse__c</fullName>
    <label>Status do Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>