force-app/main/default/objects/LogIntegracao__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trecho</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Logs das Integrações</relationshipLabel>
    <relationshipName>Logs_das_Integra_es</relationshipName>
    <type>Lookup</type>
</CustomField>