force-app/main/default/objects/LogIntegracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Method__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2023 9:52 AM</value>
    </filters>
    <label>Tudo</label>
</ListView>