force-app/main/default/objects/LogIntegracao__c/listViews/Logs_de_Hoje.listView-meta.xml
<ListView>
    <fullName>Logs_de_Hoje</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Method__c</columns>
    <columns>Status__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Integra Star</value>
    </filters>
    <label>Logs de Hoje</label>
</ListView>